# multrix

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  main.rs
